# kuka-lwr-ros

./: .gitignore  .rosinstall  .travis.yml  README.md  dependencies.rosinstall
kuka_fri_bridge/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  run_lwr.sh  setup_kuka_rights.sh
kuka_fri_bridge/data/: 980039-FRI-Driver.init
kuka_fri_bridge/include/kuka_fri_bridge/: LWRRobot_FRI.h  kuka_fri_console.h  kuka_fri_console.h~  kuka_fri_interface.h  utilities.h
kuka_fri_bridge/launch/: fri_bridge.launch  fri_bridge.launch~
kuka_fri_bridge/msg/: FRI.msg
kuka_fri_bridge/src/: kuka_fri_bridge_node.cpp  kuka_fri_console_node.cpp
kuka_fri_bridge/src/kuka_fri_bridge/: LWRRobot_FRI.cpp  kuka_fri_console (copy).cpp  kuka_fri_console.cpp  kuka_fri_interface.cpp
kuka_fri_bridge/src/std_tools/: Console.cpp  DataLogger.cpp  LogStream.cpp  NCConsole.cpp  SlotsAndBoxes.cpp  Streamable.cpp  TTree.cpp  Timer.cpp  Various.cpp  WrapMallocs.cpp  WrapMallocsReal.cpp  XmlTree.cpp
kuka_lwr/lwr_controllers/: CMakeLists.txt  README.md  lwr_controllers_plugins.xml  package.xml
kuka_lwr/lwr_controllers/cfg/: PID.cfg  damping_param.cfg  damping_param_all.cfg  friction_comp.cfg  passive_ds_param.cfg  rot_stiffness.cfg  stiffness_param.cfg  stiffness_param_all.cfg
kuka_lwr/lwr_controllers/cmake/: FindqpOASES.cmake
kuka_lwr/lwr_controllers/include/controllers/: base_controllers.h  cartesian_force.h  cartesian_hybrid.h  cartesian_position.h  cartesian_velocity.h  change_ctrl_mode.h  ff_fb_cartesian.h  gravity_compensation.h  joint_position.h  open_loop_cartesian.h  passive_ds.h
kuka_lwr/lwr_controllers/include/lwr_controllers/: KinematicChainControllerBase.h  joint_controllers.h  joint_kinematics_imp.h  joint_kinematics_torq.h  joint_position_impedance_controller.h  kuka_joint_state_controller.h  one_task_inverse_kinematics.h
kuka_lwr/lwr_controllers/include/utils/: base_safety.h  contact_safety.h  definitions.h  friction_compensation.h  safety.h  speed_safety.h
kuka_lwr/lwr_controllers/msg/: FF_FB_plan.msg
kuka_lwr/lwr_controllers/param/: friction_comp.yaml
kuka_lwr/lwr_controllers/src/: joint_controllers.cpp  joint_kinematics_imp.cpp  joint_kinematics_torq.cpp  joint_position_impedance_controller.cpp  kuka_joint_state_controller.cpp  one_task_inverse_kinematics.cpp
kuka_lwr/lwr_controllers/src/controllers/: cartesian_force.cpp  cartesian_hybrid.cpp  cartesian_position.cpp  cartesian_velocity.cpp  change_ctrl_mode.cpp  ff_fb_cartesian.cpp  gravity_compensation.cpp  joint_position.cpp  open_loop_cartesian.cpp  passive_ds.cpp
kuka_lwr/lwr_controllers/src/utils/: contact_safety.cpp  safety.cpp  speed_safety.cpp
kuka_lwr/lwr_fri/: CMakeLists.txt  package.xml
kuka_lwr/lwr_fri/include/lwr_fri/: LWRRobot_FRI.h  lwr_fri_console.h  lwr_fri_interface.h  utilities.h
kuka_lwr/lwr_fri/launch/: fri_console.launch  lwr_fri.launch  lwr_fri_console.launch
kuka_lwr/lwr_fri/msg/: JointStates.msg
kuka_lwr/lwr_fri/src/: lwr_fri_console_node.cpp  lwr_fri_node.cpp
kuka_lwr/lwr_fri/src/lwr_fri/: LWRRobot_FRI.cpp  lwr_fri_console.cpp  lwr_fri_interface.cpp
kuka_lwr/lwr_ros_interface/: CMakeLists.txt  README.md  package.xml
kuka_lwr/lwr_ros_interface/include/lwr_ros_interface/: lwr_ros_utilities.h  ros_ee.h  ros_ee_j.h  ros_joint.h  ros_passive_ds.h  switch_controller.h
kuka_lwr/lwr_ros_interface/src/: default_topics.cpp  ros_ee_j.cpp  ros_joint.cpp  ros_passive_ds.cpp
kuka_planning_interface/kuka_action_client/: CMakeLists.txt  package.xml
kuka_planning_interface/kuka_action_client/include/kuka_action_client/: action_client_cmd_interface.h  kuka_action_client.h  kuka_action_console.h
kuka_planning_interface/kuka_action_client/src/: action_client_cmd_interface.cpp  kuka_action_client.cpp  kuka_action_console.cpp
kuka_planning_interface/kuka_action_client/src/common_action_client/: joint_position_ac.cpp
kuka_planning_interface/kuka_action_client/srv/: String_cmd.srv
kuka_planning_interface/kuka_action_server/: CMakeLists.txt  package.xml
kuka_planning_interface/kuka_action_server/action/: PLAN2CTRL.action
kuka_planning_interface/kuka_action_server/include/kuka_action_server/: action_server.h  base_action_server.h  base_ee_action.h  base_ee_action.h~  base_ee_j_action.h  base_j_action.h  base_j_action.h~  default_services.h  default_topics.h  default_types.h  default_types.h~
kuka_planning_interface/kuka_action_server/include/kuka_common_action_server/: action_initialiser.h  kuka_goto_cart_as.h  kuka_goto_joint_as.h  kuka_grav_as.h  kuka_imp_damp.h  si_units.h  speed_generator.h
kuka_planning_interface/kuka_action_server/src/: action_server.cpp  base_action_server.cpp  base_ee_action.cpp  base_ee_j_action.cpp  base_j_action.cpp  default_topics.cpp
kuka_planning_interface/kuka_action_server/src/kuka_common_action_server/: kuka_goto_cart_as.cpp  kuka_goto_joint_as.cpp  kuka_grav_as.cpp  (+2 more)
kuka_planning_interface/simple_example/: CMakeLists.txt  package.xml
kuka_planning_interface/simple_example/launch/: client.launch  real.launch  real.launch~  server.launch  speech.launch
kuka_planning_interface/simple_example/src/: client_action_node.cpp  server_action_node.cpp
lwr_examples/lwr_mpc_examples/: CMakeLists.txt  package.xml
lwr_examples/lwr_mpc_examples/include/: PointMassLinear.h
lwr_examples/lwr_mpc_examples/launch/: linear_mpc.launch  real.launch  sim.launch
lwr_examples/lwr_mpc_examples/src/: lwr_mpc_linear_node.cpp
lwr_ros_client/: CMakeLists.txt  package.xml
lwr_ros_client/include/lwr_ros_action/: joint_action.h
lwr_ros_client/include/lwr_ros_client/: action_client_cmd_interface.h  kuka_action_client.h  ros_param_parser.h
lwr_ros_client/src/: action_client_cmd_interface.cpp  kuka_action_client.cpp
lwr_ros_client/src/lwr_ros_action/: joint_action.cpp
robot_motion_generation/: CMakeLists.txt  README.md  package.xml  package.xml~
robot_motion_generation/include/robot_motion_generation/: CDDynamics.h  IterativeLQSolver.h  LQSolver.h  OCProblemFH.h  angular_velocity.h
robot_motion_generation/src/: CDDynamics.cpp  IterativeLQSolver.cpp
(+142 files in other folders)
